finish all requirement
